new pages added

--- a/public/screen2.html
+++ b/public/screen2.html
@@ -26,9 +26,9 @@
 </head>
 
 <body>
-    <div class="md:max-w-sm m-auto w-full">
-        <div class="flex justify-center items-center h-screen text-center relative w-full bg-teal-600" x-data x-on:click="location.href='screen3.html';">
-            <img class="w-full z-0 absolute" src="./images/map-white.svg" alt="map">
+    <div class="w-full m-auto md:max-w-sm">
+        <div class="relative flex items-center justify-center w-full h-screen text-center bg-teal-600" x-data x-on:click="location.href='screen3.html';">
+            <img class="absolute z-0 w-full" src="./images/map-white.svg" alt="map">
             <img class="z-10" src="./images/logo-white.svg" alt="logo">
         </div>
     </div>
