--- a/public/screen3.html
+++ b/public/screen3.html
@@ -27,14 +27,14 @@
 
 <body>
     <div class="w-full m-auto md:max-w-sm">
-        <div class="relative flex items-center justify-center w-full h-screen text-center bg-teal-50" x-data>
+        <div class="relative flex items-center justify-center w-full h-screen px-4 py-6 text-center bg-teal-50" x-data>
             <img class="absolute z-0 w-full" src="./images/map-bg.svg" alt="map">
-            <div class="z-10 flex flex-col items-center justify-center px-4 bg-white rounded-2xl drop-shadow py-7">
+            <div class="z-10 flex flex-col items-center justify-center w-full px-4 bg-white rounded-2xl drop-shadow py-7">
                 <img class="h-full mb-8" src="./images/logo.svg" alt="logo">
                 <h1 class="mb-3 text-2xl font-medium leading-tight text-center text-black">Sign in</h1>
                 <p class="mb-3 text-sm leading-tight text-center text-gray-600 w-72">Enter your phone number and password to sign in</p>
                 <div class="relative w-full mb-7">
-                    <input type="email" id="mobile" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-teal-600 peer" placeholder=" " />
+                    <input type="tel" id="mobile" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-teal-600 peer" placeholder=" " />
                     <label for="mobile" class="absolute text-sm text-gray-500 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-focus:text-teal-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Mobile Number</label>
                 </div>
                 <div class="relative w-full mb-9">
