--- a/public/screen5.html
+++ b/public/screen5.html
@@ -27,9 +27,9 @@
 
 <body>
     <div class="w-full m-auto md:max-w-sm">
-        <div class="relative flex items-center justify-center w-full h-screen text-center bg-teal-50" x-data>
+        <div class="relative flex items-center justify-center w-full h-screen px-4 py-6 text-center bg-teal-50" x-data>
             <img class="absolute z-0 w-full" src="./images/map-bg.svg" alt="map">
-            <div class="z-10 flex flex-col items-center justify-center px-4 bg-white rounded-2xl drop-shadow py-7">
+            <div class="z-10 flex flex-col items-center justify-center w-full px-4 bg-white rounded-2xl drop-shadow py-7">
                 <svg class="mb-5" width="130" height="130" viewBox="0 0 130 130" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="65" cy="65" r="65" fill="#FBE596"/>
                 </svg>                    
@@ -66,7 +66,7 @@
                     </form>
                     <p class="text-sm leading-normal text-red-700">Incorrect OTP</p>
                 </div>
-                <button type="button" class="text-white bg-teal-600 mb-4 hover:bg-teal-700 focus:ring-4 focus:outline-none focus:ring-teal-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center w-11/12">Send</button>
+                <button x-data x-on:click="location.href='screen6.html';" type="button" class="text-white bg-teal-600 mb-4 hover:bg-teal-700 focus:ring-4 focus:outline-none focus:ring-teal-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center w-11/12">Send</button>
                 <button type="button" class="text-teal-600 hover:bg-teal-600 hover:text-white focus:ring-4 focus:outline-none focus:ring-teal-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center2">Resend OTP</button>
             </div>
         </div>
